// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Browse byChar should return an object of formatted results 1`] = `
Array [
  Object {
    "title": "book1",
    "uriEncoded": Object {
      "tags": null,
      "title": "book1",
    },
  },
]
`;

exports[`Browse byChar when there are tags included with the results should return an object of formatted results 1`] = `
Array [
  Object {
    "title": "book1",
    "uriEncoded": Object {
      "tags": "tag1%2Ctag2",
      "title": "book1",
    },
  },
]
`;

exports[`Browse createRegexStr "a-zA-Z" character should return a formatted regex expressions 1`] = `"^[Aa]"`;

exports[`Browse createRegexStr numerical character should return a formatted regex expressions 1`] = `"^[0-9]"`;
